--- a/voorstel/naam_voornaam_voorstel.tex
+++ b/voorstel/naam_voornaam_voorstel.tex
@@ -26,14 +26,14 @@
 %---------- Titel & auteur ----------------------------------------------------
 
 % TODO: geef werktitel van je eigen voorstel op
-\PaperTitle{Titel voorstel}
-\PaperType{Onderzoeksvoorstel Bachelorproef 2019-2020} % Type document
+\PaperTitle{Wat is de meest performante manier om data te ontvangen en te verzenden: Een vergelijkende studie tussen gRPC en JSON en proof-of-concept }
+\PaperType{Onderzoeksvoorstel Bachelorproef 2020-2021} % Type document
 
 % TODO: vul je eigen naam in als auteur, geef ook je emailadres mee!
-\Authors{Steven Stevens\textsuperscript{1}} % Authors
+\Authors{Sven Pepermans\textsuperscript{1}} % Authors
 \CoPromotor{Piet Pieters\textsuperscript{2} (Bedrijfsnaam)}
 \affiliation{\textbf{Contact:}
-  \textsuperscript{1} \href{mailto:steven.stevens.u1234@student.hogent.be}{steven.stevens.u1234@student.hogent.be};
+  \textsuperscript{1} \href{mailto:sven.pepermans@student.hogent.be}{steven.stevens.u1234@student.hogent.be};
   \textsuperscript{2} \href{mailto:piet.pieters@acme.be}{piet.pieters@acme.be};
 }
 
