--- a/voorstel/naam_voornaam_voorstel.tex
+++ b/voorstel/naam_voornaam_voorstel.tex
@@ -26,24 +26,25 @@
 %---------- Titel & auteur ----------------------------------------------------
 
 % TODO: geef werktitel van je eigen voorstel op
-\PaperTitle{Wat is de meest performante manier om data te ontvangen en te verzenden: Een vergelijkende studie tussen gRPC en JSON en proof-of-concept }
+\PaperTitle{Wat is de meest performante manier om data te ontvangen en te verzenden op het web: Een vergelijkende studie tussen gRPC en JSON en proof-of-concept }
 \PaperType{Onderzoeksvoorstel Bachelorproef 2020-2021} % Type document
 
 % TODO: vul je eigen naam in als auteur, geef ook je emailadres mee!
 \Authors{Sven Pepermans\textsuperscript{1}} % Authors
 \CoPromotor{Piet Pieters\textsuperscript{2} (Bedrijfsnaam)}
 \affiliation{\textbf{Contact:}
-  \textsuperscript{1} \href{mailto:sven.pepermans@student.hogent.be}{steven.stevens.u1234@student.hogent.be};
+  \textsuperscript{1} \href{mailto:sven.pepermans@student.hogent.be}{sven.pepermans@student.hogent.be};
   \textsuperscript{2} \href{mailto:piet.pieters@acme.be}{piet.pieters@acme.be};
 }
 
 %---------- Abstract ----------------------------------------------------------
 
-\Abstract{Hier schrijf je de samenvatting van je voorstel, als een doorlopende tekst van één paragraaf. Wat hier zeker in moet vermeld worden: \textbf{Context} (Waarom is dit werk belangrijk?); \textbf{Nood} (Waarom moet dit onderzocht worden?); \textbf{Taak} (Wat ga je (ongeveer) doen?); \textbf{Object} (Wat staat in dit document geschreven?); \textbf{Resultaat} (Wat verwacht je van je onderzoek?); \textbf{Conclusie} (Wat verwacht je van van de conclusies?); \textbf{Perspectief} (Wat zegt de toekomst voor dit werk?).
-
-Bij de sleutelwoorden geef je het onderzoeksdomein, samen met andere sleutelwoorden die je werk beschrijven.
-
-Vergeet ook niet je co-promotor op te geven.
+\Abstract{
+	In deze bachelorproef zal onderzoek gedaan worden naar de verschillen in performantie, tooling en usability tussen gRPC en JSON. Eerst zal er onderzocht worden wat beide data formats zijn en hoe deze werken. In het tweede deel wordt aan de hand van een proof-of-concept onderzocht welk data format het meest performant is en welk de betere usability heeft.
+	
+	De relevantie van dit onderzoek is te vinden in de digitalisering van bedrijven, alsmaar meer data wordt verzonden en ontvangen via het web aan de hand van webapplicaties zoals ASP.NET Core apps. Dit maakt de nood aan een performant dataformaat des te noodzakelijker. 
+	Door het onderzoeken van het performantste dataformaat kan er binnen bedrijven bespaard worden op resources zoals processing power. Alsook zal een performant dataformaat de user experience verbeteren door de hogere doorvoersnelheid.
+	Van deze studie wordt verwacht dat gRPC een hogere snelheid en een lager CPU gebruik zal hebben.
 }
 
 %---------- Onderzoeksdomein en sleutelwoorden --------------------------------
@@ -65,7 +66,7 @@ Vergeet ook niet je co-promotor op te geven.
 %
 % De andere sleutelwoorden zijn vrij te kiezen
 
-\Keywords{Onderzoeksdomein. Keyword1 --- Keyword2 --- Keyword3} % Keywords
+\Keywords{Webapplicatieontwikkeling. gRPC --- JSON --- Data format} % Keywords
 \newcommand{\keywordname}{Sleutelwoorden} % Defines the keywords heading name
 
 %---------- Titel, inhoud -----------------------------------------------------
