Aanpassingen aan samenvatting

--- a/voorstel/naam_voornaam_voorstel.tex
+++ b/voorstel/naam_voornaam_voorstel.tex
@@ -40,9 +40,9 @@
 %---------- Abstract ----------------------------------------------------------
 
 \Abstract{
-	In deze bachelorproef zal onderzoek gedaan worden naar de verschillen in performantie, tooling en usability tussen gRPC en JSON. Eerst zal er onderzocht worden wat beide data formats zijn en hoe deze werken. In het tweede deel wordt aan de hand van een proof-of-concept onderzocht welk data format het meest performant is en welk de betere usability heeft.
+	In deze bachelorproef zal onderzoek gedaan worden naar de verschillen in performantie, tooling en usability tussen google Remote Procedure Call (gRPC) en JavaScript Object Notation (JSON). Eerst zal er onderzocht worden wat gRPC en JSON zijn en hoe deze werken. In het tweede deel wordt aan de hand van een proof-of-concept onderzocht welk manier van data verzenden en ontvangen het meest performant is en welk de betere usability heeft.
 	
-	De relevantie van dit onderzoek is te vinden in de digitalisering van bedrijven, alsmaar meer data wordt verzonden en ontvangen via het web aan de hand van webapplicaties zoals ASP.NET Core apps. Dit maakt de nood aan een performant dataformaat des te noodzakelijker. 
+	De relevantie van dit onderzoek is te vinden in de digitalisering van bedrijven, alsmaar meer data wordt verzonden en ontvangen via het web aan de hand van webapplicaties zoals ASP.NET Core apps. Dit maakt de nood aan een performante manier van data te verzenden en ontvangen des te noodzakelijker. 
 	Door het onderzoeken van het performantste dataformaat kan er binnen bedrijven bespaard worden op resources zoals processing power. Alsook zal een performant dataformaat de user experience verbeteren door de hogere doorvoersnelheid.
 	Van deze studie wordt verwacht dat gRPC een hogere snelheid en een lager CPU gebruik zal hebben.
 }
