Klein stuk state of the art + geheugensteuntjes voor vervolg

--- a/voorstel/voorstel-inhoud.tex
+++ b/voorstel/voorstel-inhoud.tex
@@ -17,6 +17,18 @@ Je beschrijft zeker:
 
 \section{State-of-the-art}
 \label{sec:state-of-the-art}
+gRPC is open source Remote Procedure Call (RPC) framework en is in 2015 ontstaan uit zijn voorganger Stubby, deze was een single general-purpose RPC infrastructuur ~\author{Chalin} => (Patrice Chalin). Deze technologie laat het toe voor een programma om procedures te starten op andere computers in, eventueel, verschillende adresruimten aan de hand van een smal comminucatiekanaal. ~\author{Nelson1981}. gRPC zelf is geen dataformaat zoals JSON maar kan gebruiken maken van verschillende data formaten, standaard is dit Protocol buffers, ook wel Protobufs genoemd.
+
+gRPC wordt reeds gebruikt door verschillende grote bedrijven zoals Google, Netflix, en Cisco. 
+waarom gebruiken deze bedrijven grpc?
+
+wat is het verschil tussen protobufs en json?
+
+Uitleggen wat vorig onderzoek heeft uitgewezen?
+
+
+
+
 
 Hier beschrijf je de \emph{state-of-the-art} rondom je gekozen onderzoeksdomein. Dit kan bijvoorbeeld een literatuurstudie zijn. Je mag de titel van deze sectie ook aanpassen (literatuurstudie, stand van zaken, enz.). Zijn er al gelijkaardige onderzoeken gevoerd? Wat concluderen ze? Wat is het verschil met jouw onderzoek? Wat is de relevantie met jouw onderzoek?
 
