--- a/voorstel/voorstel-inhoud.tex
+++ b/voorstel/voorstel-inhoud.tex
@@ -17,14 +17,18 @@ Je beschrijft zeker:
 
 \section{State-of-the-art}
 \label{sec:state-of-the-art}
-gRPC is open source Remote Procedure Call (RPC) framework en is in 2015 ontstaan uit zijn voorganger Stubby, deze was een single general-purpose RPC infrastructuur ~\author{Chalin} => (Patrice Chalin). Deze technologie laat het toe voor een programma om procedures te starten op andere computers in, eventueel, verschillende adresruimten aan de hand van een smal comminucatiekanaal. ~\author{Nelson1981}. gRPC zelf is geen dataformaat zoals JSON maar kan gebruiken maken van verschillende data formaten, standaard is dit Protocol buffers, ook wel Protobufs genoemd.
+gRPC is open source Remote Procedure Call (RPC) framework en is in 2015 ontstaan uit zijn voorganger Stubby, deze was een single general-purpose RPC infrastructuur \autocite{Chalin} => (Patrice Chalin). Deze technologie laat het toe voor een programma om procedures te starten op andere computers in, eventueel, verschillende adresruimten aan de hand van een smal comminucatiekanaal. \autocite{Nelson1981}. gRPC zelf is geen dataformaat zoals JSON maar kan gebruik maken van verschillende data formaten, standaard is dit Protocol buffers, ook wel Protobufs genoemd.
 
-gRPC wordt reeds gebruikt door verschillende grote bedrijven zoals Google, Netflix, en Cisco. 
-waarom gebruiken deze bedrijven grpc?
+JSON en Protocol Buffers hebben zowel gelijkenissen als grote verschillen, beide zijn een language-neutral dataformaat zo blijkt uit de documentatie van \autocite{Google} => Google en \autocite{Crockford} => Crockford. Het grootste, visuele voor de gebruiker is te vinden in de structuur. JSON is een collectie van naam/value paren of een geordende lijst van waarden, daarintegen maken Protobufs gebruik van een soort model, er moet maar eenmaal gedefinieerd worden hoe de data gestructureerd zal zijn, daarna kan gebruik gemaakt worden van gegenereerde code om gemakkelijk data van en naar een variëteit van data streams te lezen en schrijven. Dit kan allemaal geprogrammeerd worden in heel wat verschillende programmeertalen.
 
-wat is het verschil tussen protobufs en json?
+gRPC wordt reeds gebruikt door verschillende grote bedrijven zoals Cisco en Netflix. 
+Cisco gebruikt gRPC als het ideale, uniforme transportprocol voor modelgestuurde configuratie en telemetrie. Dit komt dankzij de ondersteuning voor hoogwaardige bidirectionele streaming, op TLS gebaseerde beveiliging en het brede scala aan programmeertalen. 
+Netflix aan de andere hand koos voor gRPC omdat ze belang hechtte aan de architectonische kennis in de IDL (proto) dat een onderdeel is van gRPC en aan de, van deze proto afgeleide, codegeneratie. Daarnaast speelde ook de cross-language compatibility en codegeneratie in gRPC een belangrijke rol bij de keuze voor gRPC bij Netflix \autocite{Foundation2018} => (Cloud Native Computing Foundation, 2018).
 
-Uitleggen wat vorig onderzoek heeft uitgewezen?
+Eerder officiëel onderzoek is nog niet gevoerd naar dit onderwerp, echter zijn wel online artikels te vinden die gRPC met REST gaan vergelijken aan de hand van een benchmark. Eén zo een onderzoek is uitgevoerd door \textcite{Fernando2019} => Ruwan Fernando (2019). Dit onderzoek was een benchmark tussen gRPC met Protocol Buffers en REST met JSON concludeerd dat gRPC sneller was dan REST behalve bij het streamen van data, hier is gRPC iets trager als REST.
+
+Het onderzoek dat in deze Bachelorproef zal uitgevoerd worden zal gelijkaardig zijn als dat van Ruwan Fernando, hiermee wordt bedoeld dat deze proof-of-concept geprogrammeerd zal worden in C#. Het verschil met Fernando R. zijn onderzoek kan men vinden in de verwerking van de data, in dit onderzoek zal de data uit een aanhangende databank gehaald worden. Alsook zal in dit onderzoek een tienvoud van het aantal iteraties doen.
+
 
 
 
