--- a/voorstel/voorstel.bib
+++ b/voorstel/voorstel.bib
@@ -65,4 +65,11 @@
   url    = {https://www.cncf.io/case-studies/netflix/},
 }
 
+@Online{Fernando2019,
+  author = {Ruwan Fernando},
+  date   = {2019-04-03},
+  title  = {Evaluating Performance of REST vs. gRPC},
+  url    = {https://medium.com/@EmperorRXF/evaluating-performance-of-rest-vs-grpc-1b8bdf0b22da},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
