--- a/voorstel/naam_voornaam_voorstel.tex
+++ b/voorstel/naam_voornaam_voorstel.tex
@@ -66,7 +66,7 @@
 %
 % De andere sleutelwoorden zijn vrij te kiezen
 
-\Keywords{Webapplicatieontwikkeling. gRPC --- JSON --- Data format} % Keywords
+\Keywords{Webapplicatieontwikkeling. gRPC --- JSON --- API} % Keywords
 \newcommand{\keywordname}{Sleutelwoorden} % Defines the keywords heading name
 
 %---------- Titel, inhoud -----------------------------------------------------
