REST en protocol buffers toegevoegd in titel en samenvatting

--- a/voorstel/voorstel-inhoud.tex
+++ b/voorstel/voorstel-inhoud.tex
@@ -6,7 +6,7 @@
 Zonder dat we het weten maken wij, de internetgebruiker, continue gebruik van dataformaten en protocollen. Deze komen in verschillende soorten, XML, JSON, Protocol Buffers, GraphQL, ... Deze data formaten zorgen ervoor, aan de hand van een achterliggende implementatie in een Application Programming Interface (API), dat we onze vrienden hun nieuwe Facebook of Instagrampost kunnen zien in onze internetbrowser of op onze app. 
 APIs maken het meest gebruik van XML en JSON, indien toch een dominerend formaat gekozen moet worden zal dit JSON zijn. JSON is veel sneller om te lezen en schrijven dan XML.
 
-Echter wil dit niet zeggen dat JSON het snelste data formaat is. In deze Bachelorproef zal ik onderzoeken of Protocol Buffers geïmpelementeerd aan de hand van gRPC eventueel een even performant of zelfs performanter alternatief kan zijn als Representational State Transfer (REST) API dat JSON gebruikt. De bijhorende onderzoeksvragen zullen dan ook als volgt zijn:
+Echter wil dit niet zeggen dat JSON het snelste data formaat is. In deze Bachelorproef zal ik onderzoeken of Protocol Buffers geïmpelementeerd aan de hand van gRPC eventueel een even performant of zelfs performanter alternatief kan zijn als REST API dat JSON gebruikt. De bijhorende onderzoeksvragen zullen dan ook als volgt zijn:
 
 
 \begin{itemize}
