--- a/voorstel/naam_voornaam_voorstel.tex
+++ b/voorstel/naam_voornaam_voorstel.tex
@@ -26,7 +26,7 @@
 %---------- Titel & auteur ----------------------------------------------------
 
 % TODO: geef werktitel van je eigen voorstel op
-\PaperTitle{Wat is de meest performante manier om data te ontvangen en te verzenden op het web: Een vergelijkende studie tussen gRPC en JSON en proof-of-concept }
+\PaperTitle{Wat is de meest performante manier om data te ontvangen en te verzenden op het web: Een vergelijkende studie tussen gRPC met Protocol Buffers en REST met JSON en proof-of-concept }
 \PaperType{Onderzoeksvoorstel Bachelorproef 2020-2021} % Type document
 
 % TODO: vul je eigen naam in als auteur, geef ook je emailadres mee!
@@ -40,7 +40,7 @@
 %---------- Abstract ----------------------------------------------------------
 
 \Abstract{
-	In deze bachelorproef zal onderzoek gedaan worden naar de verschillen in performantie, tooling en usability tussen google Remote Procedure Call (gRPC) en JavaScript Object Notation (JSON). Eerst zal er onderzocht worden wat gRPC en JSON zijn en hoe deze werken. In het tweede deel wordt aan de hand van een proof-of-concept onderzocht welk manier van data verzenden en ontvangen het meest performant is en welk de betere usability heeft.
+	In deze bachelorproef zal onderzoek gedaan worden naar de verschillen in performantie, tooling en usability tussen google Remote Procedure Call (gRPC) met Protocol Buffers en Representational State Transfer (REST) met JavaScript Object Notation (JSON). Eerst zal er onderzocht worden wat gRPC, Protocol Buffers, REST en JSON zijn en hoe deze werken. In het tweede deel wordt aan de hand van een proof-of-concept onderzocht welk manier van data verzenden en ontvangen het meest performant is en welke de betere usability heeft.
 	
 	De relevantie van dit onderzoek is te vinden in de digitalisering van bedrijven, alsmaar meer data wordt verzonden en ontvangen via het web aan de hand van webapplicaties zoals ASP.NET Core apps. Dit maakt de nood aan een performante manier van data te verzenden en ontvangen des te noodzakelijker. 
 	Door het onderzoeken van het performantste dataformaat kan er binnen bedrijven bespaard worden op resources zoals processing power. Alsook zal een performant dataformaat de user experience verbeteren door de hogere doorvoersnelheid.
