Bronnen aangepast + grammatica en schrijffouten

--- a/voorstel/voorstel.bib
+++ b/voorstel/voorstel.bib
@@ -1,52 +1,25 @@
 % Encoding: UTF-8
-@ARTICLE{Doll1954,
-  author = {Doll, Richard and Hill, A Bradford},
-  title = {The mortality of doctors in relation to their smoking habits: a preliminary
-	report},
-  journal = {British Medical Journal},
-  year = {1954},
-  volume = {328},
-  pages = {1529-1533},
-  number = {7455},
-  owner = {jbuy519},
-  timestamp = {2014.03.28}
-}
-
-@BOOK{Moore2002,
-  title = {Introduction to the Practice of Statistics},
-  publisher = {W. H. Freeman},
-  year = {2002},
-  author = {Moore, David and McCabe, George},
-  owner = {jbuy519},
-  timestamp = {2014.01.28}
-}
-
-@BOOK{Smits2011,
-  title = {Onderzoek met SPSS en Excel},
-  publisher = {Pearson Education},
-  year = {2011},
-  author = {Smits, Johan and Edens, Ronald},
-  owner = {jbuy519},
-  timestamp = {2014.01.23}
-}
 
 @PhdThesis{Nelson1981,
   author = {Bruce Jay Nelson},
   title  = {Remote Procedure Call},
-  year   = {1981},
   url    = {https://ia801900.us.archive.org/22/items/bitsavers_xeroxparctoteProcedureCall_14151614/CSL-81-9_Remote_Procedure_Call.pdf},
   file   = {:CSL-81-9_Remote_Procedure_Call.pdf:PDF},
   school = {Carnegie-Mellon University},
+  year   = {1981},
 }
 
-@Online{Crockford,
-  author = {Douglas Crockford},
-  title  = {Introducing JSON},
-  url    = {https://www.json.org/json-en.html},
+@Online{Json2017,
+  author       = {ECMA},
+  date         = {2017},
+  title        = {The JSON Data Interchange Syntax},
+  url          = {https://www.ecma-international.org/publications/files/ECMA-ST-ARCH/ECMA-404 1st edition October 2013.pdf},
+  organization = {ECMA International},
+  urldate      = {2020-12-16},
 }
 
-@Online{Chalin,
-  author = {Patrice Chalin},
+@Online{gRPC,
+  author = {gRPC Authors},
   title  = {gRPC, A high-performance, open source universal RPC framework},
   url    = {https://grpc.io/},
 }
