--- a/voorstel/voorstel-inhoud.tex
+++ b/voorstel/voorstel-inhoud.tex
@@ -6,7 +6,7 @@
 Zonder dat we het weten maken wij, de internetgebruiker, continue gebruik van dataformaten en protocollen. Deze komen in verschillende soorten, XML, JSON, Protocol Buffers, GraphQL, ... Deze data formaten zorgen ervoor, aan de hand van een achterliggende implementatie in een Application Programming Interface (API), dat we onze vrienden hun nieuwe Facebook of Instagrampost kunnen zien in onze internetbrowser of op onze app. 
 APIs maken het meest gebruik van XML en JSON, indien toch een dominerend formaat gekozen moet worden zal dit JSON zijn. JSON is veel sneller om te lezen en schrijven dan XML.
 
-Echter wil dit niet zeggen dat JSON het snelste data formaat is. In deze Bachelorproef zal ik onderzoeken of Protocol Buffers geïmpelementeerd aan de hand van gRPC eventueel een even performant of zelfs performanter alternatief kan zijn als REST API dat JSON gebruikt. De bijhorende onderzoeksvragen zullen dan ook als volgt zijn:
+Echter wil dit niet zeggen dat JSON het snelste data formaat is. In deze Bachelorproef zal ik onderzoeken of Protocol Buffers geïmplementeerd aan de hand van gRPC eventueel een even performant of zelfs performanter alternatief kan zijn als REST API dat JSON gebruikt. De bijhorende onderzoeksvragen zullen dan ook als volgt zijn:
 
 
 \begin{itemize}
@@ -18,17 +18,17 @@ Echter wil dit niet zeggen dat JSON het snelste data formaat is. In deze Bachelo
 
 \section{State-of-the-art}
 \label{sec:state-of-the-art}
-gRPC is open source Remote Procedure Call (RPC) framework en is in 2015 ontstaan uit zijn voorganger Stubby, deze was een single general-purpose RPC infrastructuur~\autocite{Chalin}. Deze technologie laat het toe voor een programma om procedures te starten op andere computers in, eventueel, verschillende adresruimten aan de hand van een smal comminucatiekanaal~\autocite{Nelson1981}. gRPC zelf is geen dataformaat zoals JSON maar kan gebruik maken van verschillende data formaten, standaard is dit Protocol buffers, ook wel Protobufs genoemd.
+gRPC is open source Remote Procedure Call (RPC) framework en is in 2015 ontstaan uit zijn voorganger Stubby, deze was een single general-purpose RPC infrastructuur~\autocite{gRPC}. Deze technologie laat het toe voor een programma om procedures te starten op andere computers in, eventueel, verschillende adresruimten aan de hand van een smal comminucatiekanaal~\autocite{Nelson1981}. gRPC zelf is geen dataformaat zoals JSON maar kan gebruik maken van verschillende data formaten, standaard is dit Protocol buffers, ook wel Protobufs genoemd.
 
-JSON en Protocol Buffers hebben zowel gelijkenissen als grote verschillen, beide zijn een language-neutral dataformaat zo blijkt uit de documentatie van Protocol Buffers~\autocite{Google} en  JSON~\autocite{Crockford}. Het grootste, visuele verschil voor de gebruiker is te vinden in de structuur. JSON is een collectie van naam/value paren of een geordende lijst van waarden, daarintegen maken Protobufs gebruik van een soort model, er moet maar eenmaal gedefinieerd worden hoe de data gestructureerd zal zijn, daarna kan gebruik gemaakt worden van gegenereerde code om gemakkelijk data van en naar een variëteit van data streams te lezen en schrijven. Dit kan allemaal geprogrammeerd worden in heel wat verschillende programmeertalen.
+JSON en Protocol Buffers hebben zowel gelijkenissen als grote verschillen, beide zijn een language-neutral dataformaat zo blijkt uit de documentatie van Protocol Buffers~\autocite{Google} en  JSON~\autocite{Json2017}. Het grootste, visuele verschil voor de gebruiker is te vinden in de structuur. JSON is een collectie van naam/value paren of een geordende lijst van waarden, daarintegen maken Protobufs gebruik van een soort model, er moet maar eenmaal gedefinieerd worden hoe de data gestructureerd zal zijn, daarna kan gebruik gemaakt worden van gegenereerde code om gemakkelijk data van en naar een variëteit van data streams te lezen en schrijven. Dit kan allemaal geprogrammeerd worden in heel wat verschillende programmeertalen.
 
 gRPC wordt reeds gebruikt door verschillende grote bedrijven zoals Cisco en Netflix. 
-Cisco gebruikt gRPC als het ideale, uniforme transportprocol voor modelgestuurde configuratie en telemetrie. Dit komt dankzij de ondersteuning voor hoogwaardige bidirectionele streaming, op TLS gebaseerde beveiliging en het brede scala aan programmeertalen. 
-Netflix aan de andere hand koos voor gRPC omdat ze belang hechtte aan de architectonische kennis in de IDL (proto) dat een onderdeel is van gRPC en aan de, van deze proto afgeleide, codegeneratie. Daarnaast speelde ook de cross-language compatibility en codegeneratie in gRPC een belangrijke rol bij de keuze voor gRPC bij Netflix~\autocite{Foundation2018}.
+Cisco gebruikt gRPC als het ideale, uniforme transportprotocol voor modelgestuurde configuratie en telemetrie. Dit komt dankzij de ondersteuning voor hoogwaardige bidirectionele streaming, op TLS gebaseerde beveiliging en het brede scala aan programmeertalen. 
+Netflix koos dan weer voor gRPC omdat ze belang hechtte aan de architectonische kennis in de IDL (proto) dat een onderdeel is van gRPC en aan de, van deze proto-afgeleide, codegeneratie. Daarnaast speelde ook de cross-language compatibility en codegeneratie in gRPC een belangrijke rol bij de keuze voor gRPC bij Netflix~\autocite{Foundation2018}.
 
-Eerder officiëel onderzoek is nog niet gevoerd naar dit onderwerp, echter zijn wel online artikels te vinden die gRPC met REST gaan vergelijken aan de hand van een benchmark. Eén zo een onderzoek is uitgevoerd door~\textcite{Fernando2019}. Dit onderzoek was een benchmark tussen gRPC met Protocol Buffers en REST met JSON concludeerd dat gRPC sneller was dan REST behalve bij het streamen van data, hier is gRPC iets trager als REST.
+Eerder werd er nog geen officieel onderzoek uitgevoerd naar dit onderwerp, echter zijn wel online artikels te vinden die gRPC met REST gaan vergelijken aan de hand van een benchmark. Eén zo een onderzoek is uitgevoerd door~\textcite{Fernando2019}. Dit onderzoek was een benchmark tussen gRPC met Protocol Buffers en REST met JSON concludeerd dat gRPC sneller was dan REST behalve bij het streamen van data, hier is gRPC iets trager als REST.
 
-Het onderzoek dat in deze Bachelorproef zal uitgevoerd worden zal gelijkaardig zijn als dat van Ruwan Fernando, hiermee wordt bedoeld dat deze proof-of-concept geprogrammeerd zal worden in C\#. Het verschil met Fernando R. zijn onderzoek kan men vinden in de verwerking van de data, in dit onderzoek zal de data uit een aanhangende databank gehaald worden. Alsook zal in dit onderzoek een tienvoud van het aantal iteraties doen.
+Het onderzoek dat in deze Bachelorproef zal uitgevoerd worden is gebaseerd op dat van Ruwan Fernando, hiermee wordt bedoeld dat deze proof-of-concept geprogrammeerd zal worden in C\# en dat de  verschillende impelementaties met elkaar vergeleken zullen worden aan de hand van een benchmark. Het verschil met Fernando R. zijn onderzoek kan men vinden in de verwerking van de data, in dit onderzoek zal de data uit een aanhangende databank gehaald worden. Alsook zal in dit onderzoek een tienvoud van het aantal iteraties doen.
 
 % Voor literatuurverwijzingen zijn er twee belangrijke commando's:
 % \autocite{KEY} => (Auteur, jaartal) Gebruik dit als de naam van de auteur
@@ -45,7 +45,7 @@ Eens de resultaten van de experimenten verzameld zijn zullen we deze vergelijken
 %---------- Verwachte resultaten ----------------------------------------------
 \section{Verwachte resultaten}
 \label{sec:verwachte_resultaten}
-Ik verwacht bij de grote payloads een duidelijk verschil in voordeel van gRPC en Protocol Buffers, echter verwacht ik wel dat REST API met JSON in de kleine payloads nog degelijk zal presteren en zelf nog licht overwegend beter zal zijn dan gRPC en Protocol Buffers.
+Ik verwacht bij de grote payloads een duidelijk verschil in voordeel van gRPC en Protocol Buffers, echter verwacht ik wel dat REST API met JSON in de kleine payloads nog degelijk zal presteren en misschien zelf nog licht overwegend beter zal zijn dan gRPC en Protocol Buffers.
 
 	\centering
 	\includegraphics[width=1\linewidth]{screenshot001}
@@ -63,5 +63,5 @@ Ik verwacht bij de grote payloads een duidelijk verschil in voordeel van gRPC en
 \section{Verwachte conclusies}
 \label{sec:verwachte_conclusies}
 
-Dit onderzoek moet doen blijken of gRPC en Protocol Buffers sneller en efficiënter zijn dan een REST API met JSON. In de PoC zal duidelijk worden dat gRPC en Protocol Buffers een sneller en efficiënter alternatief zijn voor JSON. Dit resultaat zou volgens mij verklaard worden doordat JSON een ouder data formaat is en dus niet geoptimaliseerd voor de huidige technologieën terwijl gRPC zeer recent is en ontworpen is om optimaal met de huidige technologieën om te gaan.
+Dit onderzoek moet doen blijken of gRPC en Protocol Buffers sneller en efficiënter zijn dan een REST API met JSON. In de PoC zal duidelijk worden dat gRPC en Protocol Buffers een sneller en efficiënter alternatief zijn voor JSON. Dit resultaat zou volgens mij verklaard worden doordat JSON een ouder dataformaat is en dus niet geoptimaliseerd voor de huidige technologieën terwijl gRPC zeer recent ontworpen is om optimaal met de huidige technologieën om te gaan.
 
