--- a/voorstel/naam_voornaam_voorstel.tex
+++ b/voorstel/naam_voornaam_voorstel.tex
@@ -31,10 +31,12 @@
 
 % TODO: vul je eigen naam in als auteur, geef ook je emailadres mee!
 \Authors{Sven Pepermans\textsuperscript{1}} % Authors
-\CoPromotor{Piet Pieters\textsuperscript{2} (Bedrijfsnaam)}
+\CoPromotor{
+	%\textsuperscript{2}
+ }
 \affiliation{\textbf{Contact:}
   \textsuperscript{1} \href{mailto:sven.pepermans@student.hogent.be}{sven.pepermans@student.hogent.be};
-  \textsuperscript{2} \href{mailto:piet.pieters@acme.be}{piet.pieters@acme.be};
+  %\textsuperscript{2} \href{mailto:}{};
 }
 
 %---------- Abstract ----------------------------------------------------------
