--- a/voorstel/voorstel-inhoud.tex
+++ b/voorstel/voorstel-inhoud.tex
@@ -3,10 +3,10 @@
 \section{Introductie} % The \section*{} command stops section numbering
 \label{sec:introductie}
 
-Zonder dat we het weten maken wij, de internetgebruiker, continue gebruik van dataformaten en protocollen. Deze komen in verschillende soorten, XML, JSON, Protocol Buffers, GraphQL, ... Deze data formaten zorgen ervoor, aan de hand van een achterliggende implementatie in een Application Programming Interface (API), dat we onze vrienden hun nieuwe Facebook of Instagrampost kunnen zien in onze internetbrowser of op onze app. 
-APIs maken het meest gebruik van XML en JSON, indien toch een dominerend formaat gekozen moet worden zal dit JSON zijn. JSON is veel sneller om te lezen en schrijven dan XML.
+Zonder dat het te weten of te beseffen maakt de internetgebruiker continue gebruik van dataformaten en protocollen. Deze komen in verschillende soorten, XML, JSON, Protocol Buffers, GraphQL, ... Deze data formaten zorgen aan de hand van een achterliggende implementatie in een Application Programming Interface (API) voor dat mensen hun vrienden hun nieuwe Facebook of Instagrampost kunnen zien in een internetbrowser of op een app. 
+APIs maken het meest gebruik van XML en JSON, indien toch een dominerend formaat gekozen moet worden zal dit JSON zijn. JSON is veel sneller om te lezen en te schrijven dan XML.
 
-Echter wil dit niet zeggen dat JSON het snelste data formaat is. In deze Bachelorproef zal ik onderzoeken of Protocol Buffers geïmplementeerd aan de hand van gRPC eventueel een even performant of zelfs performanter alternatief kan zijn als REST API dat JSON gebruikt. De bijhorende onderzoeksvragen zullen dan ook als volgt zijn:
+Echter wil dit niet zeggen dat JSON het snelste data formaat is. In deze Bachelorproef zal onderzocht worden of Protocol Buffers geïmplementeerd aan de hand van gRPC eventueel een even performant of zelfs performanter alternatief kan zijn als REST API dat JSON gebruikt. De bijhorende onderzoeksvragen zullen dan ook als volgt zijn:
 
 
 \begin{itemize}
@@ -45,7 +45,7 @@ Eens de resultaten van de experimenten verzameld zijn zullen we deze vergelijken
 %---------- Verwachte resultaten ----------------------------------------------
 \section{Verwachte resultaten}
 \label{sec:verwachte_resultaten}
-Ik verwacht bij de grote payloads een duidelijk verschil in voordeel van gRPC en Protocol Buffers, echter verwacht ik wel dat REST API met JSON in de kleine payloads nog degelijk zal presteren en misschien zelf nog licht overwegend beter zal zijn dan gRPC en Protocol Buffers.
+Bij de grote payloads wordt een duidelijk verschil in voordeel van gRPC en Protocol Buffers verwacht, echter wordt er wel ook verwacht dat REST API met JSON in de kleine payloads nog degelijk zal presteren en misschien zelf nog licht overwegend beter zal zijn dan gRPC en Protocol Buffers.
 
 	\centering
 	\includegraphics[width=1\linewidth]{screenshot001}
@@ -63,5 +63,5 @@ Ik verwacht bij de grote payloads een duidelijk verschil in voordeel van gRPC en
 \section{Verwachte conclusies}
 \label{sec:verwachte_conclusies}
 
-Dit onderzoek moet doen blijken of gRPC en Protocol Buffers sneller en efficiënter zijn dan een REST API met JSON. In de PoC zal duidelijk worden dat gRPC en Protocol Buffers een sneller en efficiënter alternatief zijn voor JSON. Dit resultaat zou volgens mij verklaard worden doordat JSON een ouder dataformaat is en dus niet geoptimaliseerd voor de huidige technologieën terwijl gRPC zeer recent ontworpen is om optimaal met de huidige technologieën om te gaan.
+Dit onderzoek moet doen blijken of gRPC en Protocol Buffers sneller en efficiënter zijn dan een REST API met JSON. In de PoC zal duidelijk worden dat gRPC en Protocol Buffers een sneller en efficiënter alternatief zijn voor JSON. Dit resultaat zou eventueel verklaard kunnen worden doordat JSON een ouder dataformaat is en dus niet geoptimaliseerd is voor de huidige technologieën terwijl gRPC zeer recent ontworpen is om optimaal met de huidige technologieën om te gaan.
 
