Toevoeging co-promotor

--- a/voorstel/naam_voornaam_voorstel.tex
+++ b/voorstel/naam_voornaam_voorstel.tex
@@ -32,11 +32,11 @@
 % TODO: vul je eigen naam in als auteur, geef ook je emailadres mee!
 \Authors{Sven Pepermans\textsuperscript{1}} % Authors
 \CoPromotor{
-	%\textsuperscript{2}
+	Kristof van Moorter\textsuperscript{2}
  }
 \affiliation{\textbf{Contact:}
   \textsuperscript{1} \href{mailto:sven.pepermans@student.hogent.be}{sven.pepermans@student.hogent.be};
-  %\textsuperscript{2} \href{mailto:}{};
+  \textsuperscript{2} \href{mailto:kristofvanmoorter@zeb.be}{kristofvanmoorter@zeb.be};
 }
 
 %---------- Abstract ----------------------------------------------------------
