--- a/voorstel/voorstel-inhoud.tex
+++ b/voorstel/voorstel-inhoud.tex
@@ -42,7 +42,7 @@ Het onderzoek dat in deze Bachelorproef zal uitgevoerd worden is gebaseerd op da
 %---------- Methodologie ------------------------------------------------------
 \section{Methodologie}
 \label{sec:methodologie}
-Het onderzoek zal gevoerd worden aan de hand van simulaties en experimenten in een Proof-of-Content (PoC). Er zullen 2 identieke APIs opgesteld worden in C\#, een .NET Core REST API voor JSON, en .NET Core API voor gRPC. Aan de hand van een benchmark tool, dewelke nog niet specifiek gekozen is, zullen er 2 verschillende categorieën aan GET en POST calls uitgevoerd worden. Big payload calls, hier zal substantief meer data opgehaald en verzonden worden dan bij de Small payload calls. Daarnaast zal het experiment twee maal uitgevoerd worden, een eerste keer met 1000 iteraties en een tweede maal met 2000 iteraties, dit om inaccurate metingen van kleine uitvoertijden te verminderen.
+Het onderzoek zal gevoerd worden aan de hand van simulaties en experimenten in een Proof-of-Content (PoC). Er zullen 2 identieke APIs opgesteld worden in C\#, een .NET Core REST API voor JSON, en .NET Core API voor gRPC. Aan de hand van een benchmark tool, dewelke nog niet specifiek gekozen is, zullen er 2 verschillende categorieën aan GET en POST calls uitgevoerd worden. Big payload calls, hier zal substantief meer data opgehaald en verzonden worden dan bij de Small payload calls. Daarnaast zal het experiment meerdere malen uitgevoerd worden met 1000 en 2000 iteraties, dit om inaccurate metingen van kleine uitvoertijden te verminderen en een duidelijke conclusie te kunnen vormen.
 Eens de resultaten van de experimenten verzameld zijn zullen we deze vergelijken en conclusies trekken.
 %---------- Verwachte resultaten ----------------------------------------------
 \section{Verwachte resultaten}
