--- a/voorstel/voorstel-inhoud.tex
+++ b/voorstel/voorstel-inhoud.tex
@@ -7,7 +7,7 @@ Zonder dat het te weten of te beseffen maakt de internetgebruiker continue gebru
 APIs maken het meest gebruik van XML en JSON, indien toch een dominerend formaat gekozen moet worden zal dit JSON zijn. JSON is veel sneller om te lezen en te schrijven dan XML.
 
 Echter wil dit niet zeggen dat JSON het snelste data formaat is. 
-De Fashion Society is een moederbedrijf met verschillende kledingsketens onder zich. Om alles vlot te laten verlopen wordt gebruik gemaakt van een centraal beheersysteem voor zowat alles dat nodig is, dit houdt in maar is niet beperkt tot pickorders, webshops, ... Dit interne systeem maakt gebruik van het Facçade patroon, dit is een structuur waar er maar één toegangspunt is tot een collectie ojecten met diensten en services. In het Facçade patroon van de Fashion Society is de Orchestrator het toegangspunt tot een collectie van meerdere API’s, deze krijgt een request binnen voor een bepaalde service of dienst maar weet niet naar welke hij deze request moet doorsturen. Om dit op te lossen wordt gebruik gemaakt van de Discovery API, de Orchestrator zal deze aanroepen en de Discovery zal vervolgens de juiste Service ophalen en terugsturen naar de Orchestrator zodanig dat deze de originele request kan doorsturen naar de correcte API.
+De Fashion Society is een moederbedrijf met verschillende kledingsketens onder zich. Om alles vlot te laten verlopen wordt gebruik gemaakt van een centraal beheersysteem voor zowat alles dat nodig is, dit houdt in maar is niet beperkt tot pickorders, webshops, ... Dit interne systeem maakt gebruik van het Façade patroon, dit is een structuur waar er maar één toegangspunt is tot een collectie ojecten met diensten en services. In het Façade patroon van de Fashion Society is de Orchestrator het toegangspunt tot een collectie van meerdere API’s, deze krijgt een request binnen voor een bepaalde service of dienst maar weet niet naar welke hij deze request moet doorsturen. Om dit op te lossen wordt gebruik gemaakt van de Discovery API, de Orchestrator zal deze aanroepen en de Discovery zal vervolgens de juiste Service ophalen en terugsturen naar de Orchestrator zodanig dat deze de originele request kan doorsturen naar de correcte API.
 
 De Fashion Society wordt alsmaar groter en is op zoek naar een manier om de Discovery API performanter te laten wezen om zo meer realtime requests te kunnen afhandelen. De huidige Discovery API is een REST API dat gebruik maakt van JSON. In deze Bachelorproef zal onderzocht worden of Protocol Buffers ge¨ımplementeerd aan de hand van gRPC eventueel een even performant of zelfs performanter alternatief kan zijn voor de huidige implementatie van de Fashion Society dat gebruik maakt van een REST API met JSON. De bijhorende onderzoeksvragen zullen dan ook als volgt zijn:
 
