--- a/bachproef/bachproef-tin.tex
+++ b/bachproef/bachproef-tin.tex
@@ -11,25 +11,25 @@
 % TODO: Vul dit aan met je eigen info:
 
 % De titel van het rapport/bachelorproef
-\title{Titel}
+\title{Wat is de meest performante manier om data te ontvangen en te verzenden op het web: Een vergelijkende studie tussen gRPC met Protocol Buffers en REST met JSON en proof-of-concept}
 
 % Je eigen naam
-\author{Steven Stevens}
+\author{Sven Pepermans}
 
 % De naam van je promotor (lector van de opleiding)
-\promotor{Jan Janssens}
+\promotor{Antonia Pierreux}
 
 % De naam van je co-promotor. Als je promotor ook je opdrachtgever is en je
 % dus ook inhoudelijk begeleidt (en enkel dan!), mag je dit leeg laten.
-\copromotor{Piet Pieters}
+\copromotor{Kristof van Moorter}
 
 % Indien je bachelorproef in opdracht van/in samenwerking met een bedrijf of
 % externe organisatie geschreven is, geef je hier de naam. Zoniet laat je dit
 % zoals het is.
-\instelling{---}
+\instelling{The Fashion Society}
 
 % Academiejaar
-\academiejaar{2018-2019}
+\academiejaar{2020-2021}
 
 % Examenperiode
 %  - 1e semester = 1e examenperiode => 1
