--- a/voorstel/voorstel-inhoud.tex
+++ b/voorstel/voorstel-inhoud.tex
@@ -12,10 +12,8 @@ De Fashion Society is een moederbedrijf met verschillende kledingsketens onder z
 De Fashion Society wordt alsmaar groter en is op zoek naar een manier om de Discovery API performanter te laten wezen om zo meer realtime requests te kunnen afhandelen. De huidige Discovery API is een REST API dat gebruik maakt van JSON. In deze Bachelorproef zal onderzocht worden of Protocol Buffers ge¨ımplementeerd aan de hand van gRPC eventueel een even performant of zelfs performanter alternatief kan zijn voor de huidige implementatie van de Fashion Society dat gebruik maakt van een REST API met JSON. De bijhorende onderzoeksvragen zullen dan ook als volgt zijn:
 
 \begin{itemize}
-  \item Welk dataformaat is het meest performant voor de Discovery API van The Fashion Society? 
-  \item Is gRPC met ProtocolBuffers sneller dan een REST API met JSON voor de implementatie van The Fashion Society?
-  \item Is gRPC met ProtocolBuffers efficiënter dan een REST API met JSON voor de implementatie van The Fashion Society?
-  
+  \item Is gRPC met ProtocolBuffers sneller dan een REST API met JSON?
+  \item Is gRPC met ProtocolBuffers efficiënter dan een REST API met JSON?
 \end{itemize}
 
 %---------- Stand van zaken ---------------------------------------------------
