--- a/bachproef/voorwoord.tex
+++ b/bachproef/voorwoord.tex
@@ -4,7 +4,18 @@
 
 \chapter*{\IfLanguageName{dutch}{Woord vooraf}{Preface}}
 \label{ch:voorwoord}
+Ik heb deze bachelorproef geschreven voor het voltooien van mijn opleiding Toegepaste Informatica met als afstudeerrichting Mobile Apps. Ik heb dit onderzoek rond performantie tussen gRPC met Protocol Buffers en REST met JSON voor de implementatie van The Fashion Society uitgevoerd omdat ik grote interesse heb in het ontwikkelen back-end applicaties en services. Daarnaast vind ik de back-end structuur van The Fashion Society waarmee ik leren werken heb gedurende mijn stage zeer intrigerend en vond ik het passend om te onderzoeken of het systeem performanter te maken is door enkel het gebruikte dataformaat, en de bijhorende structuur, aan te passen.
+Dit onderzoek heeft mij doen inzien dat er meer dan enkel REST en JSON is voor back-end applicaties en services. Waar ik voordien standaard JSON gebruikte zal ik nu eerst grondig nadenken of het niet beter is om een alternatief dataformaat te gebruiken.
 
+Deze bacherlorproef zou echter niet tot stand zijn gekomen zijn zonder de hulp en bijstand van enkele mensen. Wat hierop volgt is een bedanking aan alle mensen die mij gesteund en geholpen hebben bij het ontwikkelen van deze bachelorproef.
+ 
+Eerst en vooral zou ik The Fashion Society en specifiek Yoerick Lemmelijn willen bedanken voor het vertrouwen dat zij in mij hebben gestoken met het toegang verlenen tot de interne test server waarop een kopie van hun systeem draait en dewelke ook gebruik maakt van gevoelige data zoals klantgegevens. Als volgt wil ik zeer graag mijn co-promotor Kristof van Moorter bedanken. Dankzij zijn uitgebreide kennis van zowel het interne systeem van The Fashion Society als back-end applicaties, microservices en dataformaten is toch wel een groot deel van mijn bachelorproef mogelijk gemaakt.
+
+Alsook wil ik graag mijn promotor Antonia Pierreux bedanken voor de bijstand en feedback op de inhoud van deze bachelorproef en voor het altijd klaar staan voor te antwoorden op soms, wat ik zelf kan beschrijven als domme, vragen.
+
+Tot slot zou ik ook mijn ouders en vriendin willen bedanken voor mij te pushen op de momenten dat het nodig was zodanig dat deze bachelorproef voor de deadline zou afgeraakt zijn.
+
+Bij deze wens ik u een aangename leeservaring toe.
 %% TODO:
 %% Het voorwoord is het enige deel van de bachelorproef waar je vanuit je
 %% eigen standpunt (``ik-vorm'') mag schrijven. Je kan hier bv. motiveren
