--- a/voorstel/voorstel-inhoud.tex
+++ b/voorstel/voorstel-inhoud.tex
@@ -49,13 +49,13 @@ Eens de resultaten van de experimenten verzameld zijn zullen we deze vergelijken
 \label{sec:verwachte_resultaten}
 Bij de grote payloads wordt een duidelijk verschil in voordeel van gRPC en Protocol Buffers verwacht, echter wordt er wel ook verwacht dat REST API met JSON in de kleine payloads nog degelijk zal presteren en misschien zelf nog licht overwegend beter zal zijn dan gRPC en Protocol Buffers.
 
-	\centering
-	\includegraphics[width=1\linewidth]{screenshot001}
+%	\centering
+%	\includegraphics[width=1\linewidth]{screenshot001}
 
 
 
-	\centering
-	\includegraphics[width=1\linewidth]{screenshot002}
+%	\centering
+%	\includegraphics[width=1\linewidth]{screenshot002}
 
 	
 
