--- a/bachproef/samenvatting.tex
+++ b/bachproef/samenvatting.tex
@@ -37,4 +37,4 @@
 \chapter*{\IfLanguageName{dutch}{Samenvatting}{Abstract}}
 
 Op basis van dit onderzoek kan The Fashion Society kiezen om de huidige structuur van de Discovery API, zijnde REST met JSON, te behouden of over te schakelen naar gRPC met Protocol Buffers. Dit onderzoek is interessant doordat The Fashion Society als maar blijft uitbreiden en er dagelijks honderdduizenden requests passeren door zowel de Orchestrator als de Discovery API en opmerkelijke verbeteringen in performantie door de eindgebruiker, zijnde het personeel van The Fashion Society en onderliggende bedrijven, duidelijk gevoeld kunnen worden. In dit onderzoek worden REST met JSON en gRPC met Protocol Buffers onderzocht en met elkaar vergeleken. Voor het uitvoeren van dit onderzoek wordt gebruik gemaakt van de testserver van The Fashion Society waar de huidige structuur reeds op geïmplementeerd is. De twee structuren worden vergeleken op basis van performantie in twee groeperingen, de kleine payload bestaande uit minder dan honderdduizend requests en de grote payload bestaande uit vijfhonderdduizend requests. Verder in dit document zult u een inleiding tot het onderwerp vinden waarin onder andere de huidige stand van zaken, de onderzoeksvraag en het verdere verloop van deze bachelorproef beschreven staan. Alsook vindt u voor elk van beide structuren de resultaten van beide payloads.
-%TODO Aanvullen met reusltaat van onderzoek.
+%TODO Aanvullen met resultaat van onderzoek.
